--- a/style.css
+++ b/style.css
@@ -1,32 +1,48 @@
+
 body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 .footer{
-  margin-left : 80px;
   font-size : 18px;
+  
 }
 
 .grid{
   display: grid;
   grid-template-columns: repeat(3,1fr);
+  justify-content: center;
+  padding-top: 10px;
+  width: 100%;
 }
 .flex{
   display: flex;
+  column-gap: 30px;
 }
 .middle-grid{
   text-align: center;
+  position: relative;
+  justify-content: center;
 }
 .box{
   border: 2px solid rgb(185, 185, 185);
   border-radius: 10px;
   text-align: center;
   padding: 10px;
-  width: 120px;
+  width: 150px;
 }
 
 .left-grid, .right-grid{
   justify-content: space-evenly;
+}
+.left-grid{
+  justify-content: flex-end;
+}
+.right-grid{
+  justify-content: flex-start;
 }
 img{
   width: 100px;
@@ -37,4 +53,46 @@ h2{
 }
 h1{
   font-size: 40px;
+}
+.footer{
+  text-align: center;
+  background-color: rgb(255, 184, 184);
+  height: 40px;
+  padding-top: 5px;
+  border-top: 5px solid red;
+}
+.box{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.box1, .box2{
+  margin-left: 10px;
+}
+.box4{
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 870px) {
+  .flex{
+    display: block;
+  }
+  .box2, .box4{
+    margin-top: 25px;
+  }
+}
+@media only screen and (max-width: 440px){
+  .box{
+    padding: 0;
+  }
+}
+@media only screen and (max-width: 400px){
+  .box{
+    height: 250px;
+    width: 130px;
+  }
+}
+@media only screen and (max-width: 360px){
+  .box{
+    width: 100px;
+  }
 }
